--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -1,37 +1,59 @@
 ---
-name: Schedule - Renovate
-
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
+name: Renovate
 on:
-  workflow_dispatch:
-    inputs:
-      dryRun:
-        description: "Dry-Run"
-        default: false
-        required: false
-        type: boolean
-      logLevel:
-        description: "Log-Level"
-        default: "debug"
-        required: false
-  schedule:
-    - cron: "0 * * * *"
   push:
     branches:
       - main
     paths:
-      - ".github/renovate.json5"
-      - ".github/workflows/schedule-renovate.yaml"
+      - .renovaterc.json5
+      - .renovate/**.json5
+  schedule:
+    - cron: 0 * * * *
+  workflow_dispatch:
+    inputs:
+      dryRun:
+        description: Dry Run
+        type: boolean
+        default: false
+        required: true
+      logLevel:
+        description: Log Level
+        type: choice
+        default: debug
+        options:
+          - debug
+          - info
+        required: true
+      version:
+        description: Renovate Version
+        default: latest
+        required: true
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
 
 jobs:
-  renovate:
+  main:
+    name: Renovate
     runs-on: ubuntu-latest
+    permissions:
+      packages: read
     steps:
-      - name: Checkout
-        uses: actions/checkout@v5.0.0
-      - name: Self-hosted Renovate
-        uses: renovatebot/github-action@v43.0.11
-        with:
-          configurationFile: ".github/renovate.json5"
-          token: ${{ secrets.RENOVATE_TOKEN }}
+      - name: Run Renovate
+        uses: renovatebot/github-action@6927a58a017ee9ac468a34a5b0d2a9a9bd45cac3 # v43.0.11
         env:
-          LOG_LEVEL: 'debug'
+          LOG_LEVEL: ${{ inputs.logLevel || 'debug' }}
+          RENOVATE_AUTODISCOVER: true
+          RENOVATE_AUTODISCOVER_FILTER: ${{ github.repository }}
+          RENOVATE_DRY_RUN: ${{ inputs.dryRun }}
+          RENOVATE_INTERNAL_CHECKS_FILTER: strict
+          RENOVATE_PLATFORM: github
+          RENOVATE_PLATFORM_COMMIT: true
+        with:
+          token: ${{ secrets.RENOVATE_TOKEN }}
+          renovate-version: ${{ inputs.version || 'latest' }}
