--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -1,32 +1,38 @@
 {
-  $schema: "https://docs.renovatebot.com/renovate-schema.json",
+  $schema: 'https://docs.renovatebot.com/renovate-schema.json',
   extends: [
-    "config:recommended",
-    "docker:enableMajor",
-    "helpers:pinGitHubActionDigests",
-    "github>sebastiaankok/home-ops//.renovate/automerge.json5",
-    "github>sebastiaankok/home-ops//.renovate/groups.json5",
-    "github>sebastiaankok/home-ops//.renovate/labels.json5",
-    "github>sebastiaankok/home-ops//.renovate/commit-messages.json5",
+    'config:recommended',
+    'docker:enableMajor',
+    'helpers:pinGitHubActionDigests',
+    'github>sebastiaankok/home-ops//.renovate/automerge.json5',
+    'github>sebastiaankok/home-ops//.renovate/groups.json5',
+    'github>sebastiaankok/home-ops//.renovate/labels.json5',
+    'github>sebastiaankok/home-ops//.renovate/commit-messages.json5',
   ],
-  "dependencyDashboardTitle": "Renovate Dashboard 🤖",
-  "ignorePaths": [
-    "**/*.sops.*",
-    "**/resources/**"
+  dependencyDashboardTitle: 'Renovate Dashboard 🤖',
+  ignorePaths: [
+    '**/*.sops.*',
+    '**/resources/**',
   ],
-
-  // Managers
-  "nix": {
-    "enabled": true,
-    "fileMatch": ["(^|/)flake\\.lock$"]
+  nix: {
+    enabled: true,
+    managerFilePatterns: [
+      '/(^|/)flake\\.lock$/',
+    ],
   },
-  "argocd": {
-    "fileMatch": ["^k8s/.+\\.ya?ml$"]
+  argocd: {
+    managerFilePatterns: [
+      '/^k8s/.+\\.ya?ml$/',
+    ],
   },
-  "helm-values": {
-    "fileMatch": ["^k8s/.+\\.ya?ml$"]
+  'helm-values': {
+    managerFilePatterns: [
+      '/^k8s/.+\\.ya?ml$/',
+    ],
   },
-  "kubernetes": {
-    "fileMatch": ["^k8s/.+\\.ya?ml$"]
+  kubernetes: {
+    managerFilePatterns: [
+      '/^k8s/.+\\.ya?ml$/',
+    ],
   },
 }
