chore: fix upload limit

--- a/k8s/k3s-home/argocd/media/immich/values.yaml
+++ b/k8s/k3s-home/argocd/media/immich/values.yaml
@@ -113,6 +113,7 @@ ingress:
     className: nginx
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-dns
+      nginx.ingress.kubernetes.io/proxy-body-size: "0"
     hosts:
       - host: immich.otohgunga.nl
         paths:
