chore: add group for nix

--- a/.renovate/groups.json5
+++ b/.renovate/groups.json5
@@ -11,5 +11,11 @@
       },
       minimumGroupSize: 2,
     },
+    {
+      "description": "Group all Nix flake inputs together",
+      "groupName": "nix flakes",
+      "matchManagers": ["nix"],
+      "matchPaths": ["flake.lock"],
+    }
   ],
 }
