chore: disable nix for now

--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -15,7 +15,7 @@
     '**/resources/**',
   ],
   nix: {
-    enabled: true,
+    enabled: false,
     managerFilePatterns: [
       '/(^|/)flake\\.lock$/',
     ],
