--- a/k8s/k3s-home/argocd/media/immich/postgresql.yaml
+++ b/k8s/k3s-home/argocd/media/immich/postgresql.yaml
@@ -96,3 +96,13 @@ spec:
   nodeMaintenanceWindow:
     inProgress: false
     reusePVC: false
+---
+apiVersion: postgresql.cnpg.io/v1
+kind: ScheduledBackup
+metadata:
+  name: immich-postgresql-15-backup-schedule
+spec:
+  schedule: "0 0 0 * * *"
+  backupOwnerReference: self
+  cluster:
+    name: immich-postgresql-15
