--- a/k8s/k3s-home/argocd/network/netboot/local-storage.yaml
+++ b/k8s/k3s-home/argocd/network/netboot/local-storage.yaml
@@ -14,7 +14,7 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   local:
-    path: "/data/home-assistant"
+    path: "/data/netboot"
   nodeAffinity:
     required:
       nodeSelectorTerms:
