--- a/k8s/k3s-home/argocd/network/netboot/values.yaml
+++ b/k8s/k3s-home/argocd/network/netboot/values.yaml
@@ -13,8 +13,8 @@ controllers:
           limits:
             memory: 250M
         securityContext:
-          runAsUser: 1007
-          runAsGroup: 1007
+          # runAsUser: 1007
+          # runAsGroup: 1007
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
           capabilities:
