chore: enable securityContext

--- a/k8s/k3s-home/argocd/network/netboot/values.yaml
+++ b/k8s/k3s-home/argocd/network/netboot/values.yaml
@@ -12,14 +12,14 @@ controllers:
             memory: 10M
           limits:
             memory: 250M
-        # securityContext:
-          # runAsUser: 1007
-          # runAsGroup: 1007
-          # allowPrivilegeEscalation: false
-          # readOnlyRootFilesystem: true
-          # capabilities:
-          #   drop:
-          #     - ALL
+        securityContext:
+          runAsUser: 1007
+          runAsGroup: 1007
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+              - ALL
 
 service:
   app:
