chore: add assets pvc

--- a/k8s/k3s-home/argocd/network/netboot/values.yaml
+++ b/k8s/k3s-home/argocd/network/netboot/values.yaml
@@ -57,6 +57,8 @@ ingress:
 persistence:
   config:
     existingClaim: local-netboot-pvc
+  assets:
+    existingClaim: local-netboot-assets-pvc
   tmpfs:
     type: emptyDir
     globalMounts:
