chore: dns issuer

--- a/k8s/k3s-home/argocd/monitoring/homepage/values.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/values.yaml
@@ -87,7 +87,7 @@ ingress:
     enabled: true
     className: nginx
     annotations:
-      cert-manager.io/cluster-issuer: letsencrypt-prod
+      cert-manager.io/cluster-issuer: letsencrypt-dns
       nginx.ingress.kubernetes.io/proxy-body-size: 32m
     hosts:
       - host: homepage.otohgunga.nl
