chore: fix servicename

--- a/k8s/k3s-home/argocd/monitoring/homepage/values.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/values.yaml
@@ -95,7 +95,7 @@ ingress:
           - path: /
             pathType: Prefix
             service:
-              name: app
+              name: homepage
               port: 3000
     tls:
       - hosts:
