--- a/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
@@ -1,236 +1,184 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: homepage
+  name: &app homepage
   namespace: homepage
+  annotations:
+    reloader.stakater.com/match: "true"
 data:
-  # Settings for the homepage
   settings.yaml: |
-    homepage:
-      title: "Home Lab"
-      theme: "dark"
-      language: "en"
-      favicon: "/assets/favicon.ico"
+    ---
+    title: Home Lab
+    favicon: /assets/favicon.ico
+    theme: dark
+    color: neutral
+    useEqualHeights: true
+    layout: # key by group name in services.yaml
+      Media Services:
+        style: row
+        columns: 3
+      Home Automation:
+        style: row
+        columns: 3
+      Network Services:
+        style: row
+        columns: 3
+      Security & Monitoring:
+        style: row
+        columns: 3
+      System Services:
+        style: row
+        columns: 3
 
-    navigation:
-      - name: "Home"
-        url: "/"
-        icon: "home"
-      - name: "Services"
-        url: "/services"
-        icon: "server"
-      - name: "Bookmarks"
-        url: "/bookmarks"
-        icon: "bookmark"
-
-  # Services configuration
-  services.yaml: |
-    # Services
-    services:
-      # Media Services
-      - name: "Jellyfin"
-        url: "https://jellyfin.otohgunga.nl"
-        icon: "film"
-        description: "Media streaming platform"
-        category: "media"
-
-      - name: "Immich"
-        url: "https://immich.otohgunga.nl"
-        icon: "image"
-        description: "Photo and video management"
-        category: "media"
-
-      - name: "Bazarr"
-        url: "https://bazarr.otohgunga.nl"
-        icon: "subtitles"
-        description: "Subtitle management for Radarr and Sonarr"
-        category: "media"
-
-      - name: "Jellyseerr"
-        url: "https://jellyseerr.otohgunga.nl"
-        icon: "theater-masks"
-        description: "Media request management"
-        category: "media"
-
-      - name: "Radarr"
-        url: "https://radarr.otohgunga.nl"
-        icon: "movie"
-        description: "Movie collection management"
-        category: "media"
-
-      - name: "Sonarr"
-        url: "https://sonarr.otohgunga.nl"
-        icon: "tv"
-        description: "TV show collection management"
-        category: "media"
-
-      - name: "Prowlarr"
-        url: "https://prowlarr.otohgunga.nl"
-        icon: "bell-ring"
-        description: "Indexer management for Radarr and Sonarr"
-        category: "media"
-
-      - name: "Sabnzbd"
-        url: "https://sabnzbd.otohgunga.nl"
-        icon: "download"
-        description: "Usenet download client"
-        category: "media"
-
-      # Home Automation
-      - name: "Home Assistant"
-        url: "https://homeassistant.otohgunga.nl"
-        icon: "home"
-        description: "Home automation platform"
-        category: "home-automation"
-
-      - name: "Zigbee2MQTT"
-        url: "https://zigbee2mqtt.otohgunga.nl"
-        icon: "settings"
-        description: "Zigbee to MQTT bridge"
-        category: "home-automation"
-
-      - name: "Mosquitto"
-        url: "https://mosquitto.otohgunga.nl"
-        icon: "radio"
-        description: "MQTT messaging broker"
-        category: "home-automation"
-
-      # Network Services
-      - name: "UniFi Controller"
-        url: "https://unifi.otohgunga.nl"
-        icon: "router"
-        description: "Network device management"
-        category: "network"
-
-      - name: "Netboot.xyz"
-        url: "https://netboot.otohgunga.nl"
-        icon: "ethernet"
-        description: "Network boot services"
-        category: "network"
-
-      - name: "WOL Proxy"
-        url: "https://wol-proxy.otohgunga.nl"
-        icon: "power"
-        description: "Wake on LAN proxy"
-        category: "network"
-
-      # Security & Monitoring
-      - name: "Frigate NVR"
-        url: "https://frigate.otohgunga.nl"
-        icon: "camera"
-        description: "AI-powered video analytics"
-        category: "security"
-
-      - name: "Prometheus"
-        url: "https://prometheus.otohgunga.nl"
-        icon: "chart-line"
-        description: "Monitoring and alerting"
-        category: "monitoring"
-
-      - name: "ArgoCD"
-        url: "https://argocd.otohgunga.nl"
-        icon: "git-branch"
-        description: "GitOps deployment management"
-        category: "management"
-
-      # System Services
-      - name: "Ingress Controller"
-        url: "https://ingress.otohgunga.nl"
-        icon: "shield"
-        description: "Kubernetes ingress controller"
-        category: "system"
-
-      - name: "Ingress Controller Media"
-        url: "https://ingress-media.otohgunga.nl"
-        icon: "shield"
-        description: "Media-specific ingress controller"
-        category: "system"
-
-      - name: "Cert Manager"
-        url: "https://certmanager.otohgunga.nl"
-        icon: "certificate"
-        description: "SSL certificate management"
-        category: "system"
-
-      - name: "Velero"
-        url: "https://velero.otohgunga.nl"
-        icon: "archive"
-        description: "Kubernetes backup and restore"
-        category: "system"
-
-  # Widgets configuration
   widgets.yaml: |
-    # Widgets
-    widgets:
-      # Kubernetes Cluster Overview
-      - title: "Cluster Status"
-        type: "kubernetes"
-        position: [0, 0]
-        size: [2, 2]
+    ---
+    # - logo:
+    - kubernetes:
+        cluster:
+          show: false
+          cpu: false
+          memory: false
+          showLabel: false
+          label: "cluster"
+        nodes:
+          show: true
+          cpu: true
+          memory: true
+          showLabel: true
+    - search:
+        provider: custom
+        url: https://search.unlocked.link/search?q=
+        target: _blank
+        # focus: true # Optional, will set focus to the search bar on page load
 
-      # System Resources
-      - title: "System Resources"
-        type: "system"
-        position: [2, 0]
-        size: [2, 2]
+  services.yaml: |
+    ---
+    # Media Services
+    - Media Services:
+        - Jellyfin:
+            href: https://jellyfin.otohgunga.nl
+            icon: film
+            description: Media streaming platform
+        - Immich:
+            href: https://immich.otohgunga.nl
+            icon: image
+            description: Photo and video management
+        - Bazarr:
+            href: https://bazarr.otohgunga.nl
+            icon: subtitles
+            description: Subtitle management for Radarr and Sonarr
+        - Jellyseerr:
+            href: https://jellyseerr.otohgunga.nl
+            icon: theater-masks
+            description: Media request management
+        - Radarr:
+            href: https://radarr.otohgunga.nl
+            icon: movie
+            description: Movie collection management
+        - Sonarr:
+            href: https://sonarr.otohgunga.nl
+            icon: tv
+            description: TV show collection management
+        - Prowlarr:
+            href: https://prowlarr.otohgunga.nl
+            icon: bell-ring
+            description: Indexer management for Radarr and Sonarr
+        - Sabnzbd:
+            href: https://sabnzbd.otohgunga.nl
+            icon: download
+            description: Usenet download client
 
-      # Service Status Overview
-      - title: "Service Status"
-        type: "services"
-        position: [0, 2]
-        size: [4, 2]
+    # Home Automation
+    - Home Automation:
+        - HomeAssistant:
+            href: https://homeassistant.otohgunga.nl
+            icon: home
+            description: Home automation platform
+        - Zigbee2MQTT:
+            href: https://zigbee2mqtt.otohgunga.nl
+            icon: settings
+            description: Zigbee to MQTT bridge
+        - Mosquitto:
+            href: https://mosquitto.otohgunga.nl
+            icon: radio
+            description: MQTT messaging broker
 
-      # Network Status
-      - title: "Network Status"
-        type: "network"
-        position: [0, 4]
-        size: [2, 2]
+    # Network Services
+    - Network Services:
+        - UniFi:
+            href: https://unifi.otohgunga.nl
+            icon: router
+            description: Network device management
+        - Netboot:
+            href: https://netboot.otohgunga.nl
+            icon: ethernet
+            description: Network boot services
+        - WOLProxy:
+            href: https://wol-proxy.otohgunga.nl
+            icon: power
+            description: Wake on LAN proxy
 
-      # Storage Status
-        title: "Storage Status"
-        type: "storage"
-        position: [2, 4]
-        size: [2, 2]
+    # Security & Monitoring
+    - Security & Monitoring:
+        - Frigate:
+            href: https://frigate.otohgunga.nl
+            icon: camera
+            description: AI-powered video analytics
+        - Prometheus:
+            href: https://prometheus.otohgunga.nl
+            icon: chart-line
+            description: Monitoring and alerting
+        - ArgoCD:
+            href: https://argocd.otohgunga.nl
+            icon: git-branch
+            description: GitOps deployment management
 
-  # Bookmarks configuration
+    # System Services
+    - System Services:
+        - Ingress:
+            href: https://ingress.otohgunga.nl
+            icon: shield
+            description: Kubernetes ingress controller
+        - IngressMedia:
+            href: https://ingress-media.otohgunga.nl
+            icon: shield
+            description: Media-specific ingress controller
+        - CertManager:
+            href: https://certmanager.otohgunga.nl
+            icon: certificate
+            description: SSL certificate management
+        - Velero:
+            href: https://velero.otohgunga.nl
+            icon: archive
+            description: Kubernetes backup and restore
+
   bookmarks.yaml: |
-    # Bookmarks
-    bookmarks:
-      # Documentation
-      - name: "Documentation"
-        links:
-          - name: "Kubernetes Documentation"
-            url: "https://kubernetes.io/docs/"
-            icon: "book"
-          - name: "ArgoCD Documentation"
-            url: "https://argo.cd/docs/"
-            icon: "book"
-          - name: "Helm Documentation"
-            url: "https://helm.sh/docs/"
-            icon: "book"
+    ---
+    # Documentation
+    - Documentation:
+        - Kubernetes:
+            href: https://kubernetes.io/docs/
+            icon: book
+        - ArgoCD:
+            href: https://argo.cd/docs/
+            icon: book
+        - Helm:
+            href: https://helm.sh/docs/
+            icon: book
 
-      # Community
-      - name: "Community"
-        links:
-          - name: "GitHub Repository"
-            url: "https://github.com/ahgraber/homelab-gitops-k3s"
-            icon: "github"
-          - name: "NixOS Wiki"
-            url: "https://nixos.wiki/"
-            icon: "book"
+    # Community
+    - Community:
+        - GitHub:
+            href: https://github.com/ahgraber/homelab-gitops-k3s
+            icon: github
+        - NixOS:
+            href: https://nixos.wiki/
+            icon: book
 
-  # Kubernetes configuration
+  docker.yaml: |
+    ---
+
   kubernetes.yaml: |
-    # Kubernetes
-    kubernetes:
-      enabled: true
-      cluster_name: "k3s-home"
-      namespace_filter: ["homepage", "monitoring", "default", "media", "home-automation", "network", "security", "system"]
-      show_events: true
-      show_pods: true
-      show_nodes: true
-      show_namespaces: true
-      show_deployments: true
-      show_services: true
-      show_ingress: true
-      show_persistentvolumeclaims: true
+    ---
+    mode: cluster
+    ingress: false # manually configure services (above)
