--- a/k8s/k3s-home/argocd/monitoring/homepage/values.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/values.yaml
@@ -105,15 +105,17 @@ ingress:
 persistence:
   config:
     type: configMap
-    name: homepage
+    name: homepage-config
     globalMounts:
-      - subPath: settings.yaml
-        path: /app/config/settings.yaml
-      - subPath: widgets.yaml
-        path: /app/config/widgets.yaml
-      - subPath: services.yaml
-        path: /app/config/services.yaml
-      - subPath: bookmarks.yaml
-        path: /app/config/bookmarks.yaml
       - subPath: kubernetes.yaml
         path: /app/config/kubernetes.yaml
+      - subPath: docker.yaml
+        path: /app/config/docker.yaml
+      - subPath: settings.yaml
+        path: /app/config/settings.yaml
+      - subPath: bookmarks.yaml
+        path: /app/config/bookmarks.yaml
+      - subPath: services.yaml
+        path: /app/config/services.yaml
+      - subPath: widgets.yaml
+        path: /app/config/widgets.yaml
