--- a/k8s/k3s-home/argocd/monitoring/homepage/rbac.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/rbac.yaml
@@ -38,6 +38,13 @@ rules:
       - customresourcedefinitions/status
     verbs:
       - get
+  - apiGroups:
+      - networking.k8s.io
+    resources:
+      - ingresses
+    verbs:
+      - get
+      - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
