--- a/k8s/k3s-home/argocd/downloads/sabnzbd/values.yaml
+++ b/k8s/k3s-home/argocd/downloads/sabnzbd/values.yaml
@@ -86,6 +86,12 @@ ingress:
     className: nginx
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-dns
+      gethomepage.dev/enabled: "true"
+      gethomepage.dev/description: Usenet downloader
+      gethomepage.dev/group: Downloads
+      gethomepage.dev/icon: sh-sabnzbd.svg
+      gethomepage.dev/name: Sabnzbd
+      gethomepage.dev/app: sabnzbd
     hosts:
       - host: sabnzbd.otohgunga.nl
         paths:
