chore: add secret

--- a/k8s/k3s-home/argocd/monitoring/homepage/values.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/values.yaml
@@ -13,6 +13,9 @@ controllers:
           TZ: Europe/Amsterdam
           LOG_LEVEL: debug
           HOMEPAGE_ALLOWED_HOSTS: "homepage.otohgunga.nl"
+          envFrom:
+            - secretRef:
+                name: homepage-secret
         resources:
           requests:
             cpu: 25m
