--- a/k8s/k3s-home/argocd/media/jellyfin/values.yaml
+++ b/k8s/k3s-home/argocd/media/jellyfin/values.yaml
@@ -62,6 +62,8 @@ ingress:
       gethomepage.dev/title: "Jellyfin"
       gethomepage.dev/icon: "jellyfin"
       gethomepage.dev/group: "Media"
+      gethomepage.dev/widget.url: "https://jellyfin.otohgunga.nl"
+      gethomepage.dev/widget.key: '{{ "{{HOMEPAGE_VAR_JELLYFIN_API_KEY}}" }}'
     hosts:
       - host: jellyfin.otohgunga.nl
         paths:
