chore: add widget type

--- a/k8s/k3s-home/argocd/media/jellyfin/values.yaml
+++ b/k8s/k3s-home/argocd/media/jellyfin/values.yaml
@@ -64,6 +64,7 @@ ingress:
       gethomepage.dev/group: "Media"
       gethomepage.dev/widget.url: "https://jellyfin.otohgunga.nl"
       gethomepage.dev/widget.key: '{{ "{{HOMEPAGE_VAR_JELLYFIN_API_KEY}}" }}'
+      gethomepage.dev/widget.type: "jellyfin"
     hosts:
       - host: jellyfin.otohgunga.nl
         paths:
