chore: add name

--- a/k8s/k3s-home/argocd/home-automation/home-assistant/values.yaml
+++ b/k8s/k3s-home/argocd/home-automation/home-assistant/values.yaml
@@ -39,7 +39,7 @@ ingress:
       cert-manager.io/cluster-issuer: letsencrypt-dns
       nginx.org/websocket-services: home-assistant
       gethomepage.dev/enabled: "true"
-      gethomepage.dev/title: "Home Assistant"
+      gethomepage.dev/name: "Home Assistant"
       gethomepage.dev/icon: "home-assistant"
       gethomepage.dev/description: Manage your home automations and devices
       gethomepage.dev/group: "Home Automation"
