feat: add homepage annotations

--- a/k8s/k3s-home/argocd/network/netboot/values.yaml
+++ b/k8s/k3s-home/argocd/network/netboot/values.yaml
@@ -42,6 +42,12 @@ ingress:
     className: nginx
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-dns
+      gethomepage.dev/enabled: "true"
+      gethomepage.dev/description: Network boot and diskless installations.
+      gethomepage.dev/group: Network
+      gethomepage.dev/icon: sh-netboot.xyz.svg
+      gethomepage.dev/name: Netboot.xyz
+      gethomepage.dev/app: netboot
     hosts:
       - host: netboot.otohgunga.nl
         paths:
