chore: move group

--- a/k8s/k3s-home/argocd/network/netboot/values.yaml
+++ b/k8s/k3s-home/argocd/network/netboot/values.yaml
@@ -44,7 +44,7 @@ ingress:
       cert-manager.io/cluster-issuer: letsencrypt-dns
       gethomepage.dev/enabled: "true"
       gethomepage.dev/description: Network boot and diskless installations.
-      gethomepage.dev/group: Network
+      gethomepage.dev/group: System
       gethomepage.dev/icon: sh-netboot.xyz.svg
       gethomepage.dev/name: Netboot.xyz
       gethomepage.dev/app: netboot
