chore: update icons

--- a/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
@@ -16,13 +16,10 @@ data:
     - System:
         - ArgoCD:
             href: https://argocd.otohgunga.nl
-            icon: argocd
-            widget:
-              type: argocd
-              url: https://argocd.otohgunga.nl
+            icon: sh-argo-cd.svg
         - Unifi:
             href: https://unifi
-            icon: unifi.png
+            icon: sh-ubiquiti-unifi.svg
 
   settings.yaml: |
     title: Homelab
