chore: add netboot icon

--- a/k8s/k3s-home/argocd/network/netboot/values.yaml
+++ b/k8s/k3s-home/argocd/network/netboot/values.yaml
@@ -45,7 +45,7 @@ ingress:
       gethomepage.dev/enabled: "true"
       gethomepage.dev/description: Network boot and diskless installations.
       gethomepage.dev/group: System
-      gethomepage.dev/icon: sh-netboot.xyz.svg
+      gethomepage.dev/icon: "sh-netboot.xyz.svg"
       gethomepage.dev/name: Netboot.xyz
       gethomepage.dev/app: netboot
     hosts:
