chore: add frigate to gethomepage

--- a/k8s/k3s-home/argocd/nvr/frigate/values.yaml
+++ b/k8s/k3s-home/argocd/nvr/frigate/values.yaml
@@ -57,6 +57,12 @@ ingress:
     className: nginx
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-dns
+      gethomepage.dev/enabled: "true"
+      gethomepage.dev/description: Video streams and webcam feeds
+      gethomepage.dev/group: Home Automation
+      gethomepage.dev/icon: sh-frigate.svg
+      gethomepage.dev/name: Frigate
+      gethomepage.dev/app: frigate
     hosts:
       - host: frigate.otohgunga.nl
         paths:
