chore: disable liveness

--- a/k8s/k3s-home/argocd/home-automation/zigbee2mqtt/values.yaml
+++ b/k8s/k3s-home/argocd/home-automation/zigbee2mqtt/values.yaml
@@ -11,7 +11,7 @@ controllers:
           tag: 2.7.0
         probes:
           liveness:
-            enabled: true
+            enabled: false
             custom: true
             spec:
               tcpSocket:
