--- a/k8s/k3s-home/argocd/system/ingress-nginx-guests/values.yaml
+++ b/k8s/k3s-home/argocd/system/ingress-nginx-guests/values.yaml
@@ -2,6 +2,7 @@ controller:
   updateStatus:
     enabled: false
   kind: Deployment
+  replicas: 0
   priorityClassName: system-cluster-critical
   ingressClassResource:
     name: ingress-nginx-guests
