--- a/k8s/k3s-home/argocd/system/velero/application.yaml
+++ b/k8s/k3s-home/argocd/system/velero/application.yaml
@@ -1,33 +1,33 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: velero
-  namespace: argocd
-  annotations:
-    argocd.argoproj.io/sync-wave: "1"
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-spec:
-  project: default
-  syncPolicy:
-    automated:
-      prune: true
-    syncOptions:
-    - CreateNamespace=true
-  destination:
-    name: in-cluster
-    namespace: velero
-  sources:
-    - repoURL: 'https://github.com/sebastiaankok/k8s-homelab.git'
-      targetRevision: main
-      ref: values
-      path: "k8s/k3s-home/argocd/system/velero/"
-      directory:
-        exclude: '{application.yaml,values.yaml}'
-    - chart: velero
-      repoURL: 'https://vmware-tanzu.github.io/helm-charts/'
-      targetRevision: "11.3.2"
-      helm:
-        releaseName: "velero"
-        valueFiles:
-          - $values/k8s/k3s-home/argocd/system/velero/values.yaml
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: velero
+#   namespace: argocd
+#   annotations:
+#     argocd.argoproj.io/sync-wave: "1"
+#   finalizers:
+#     - resources-finalizer.argocd.argoproj.io
+# spec:
+#   project: default
+#   syncPolicy:
+#     automated:
+#       prune: true
+#     syncOptions:
+#     - CreateNamespace=true
+#   destination:
+#     name: in-cluster
+#     namespace: velero
+#   sources:
+#     - repoURL: 'https://github.com/sebastiaankok/k8s-homelab.git'
+#       targetRevision: main
+#       ref: values
+#       path: "k8s/k3s-home/argocd/system/velero/"
+#       directory:
+#         exclude: '{application.yaml,values.yaml}'
+#     - chart: velero
+#       repoURL: 'https://vmware-tanzu.github.io/helm-charts/'
+#       targetRevision: "11.3.2"
+#       helm:
+#         releaseName: "velero"
+#         valueFiles:
+#           - $values/k8s/k3s-home/argocd/system/velero/values.yaml
