--- a/k8s/k3s-home/argocd/media/immich/local-storage-postgresql-15.yaml
+++ b/k8s/k3s-home/argocd/media/immich/local-storage-postgresql-15.yaml
@@ -21,3 +21,28 @@ spec:
               values:
                 - k3s-home
                 - b660-i5-13600
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: immich-postgresql-15-1
+  namespace: immich
+  annotations:
+    cnpg.io/nodeSerial: "1"
+    cnpg.io/pvcStatus: ready
+    cnpg.io/operatorVersion: 1.28.0
+  labels:
+    app.kubernetes.io/name: immich
+    cnpg.io/cluster: immich-postgresql-15
+    cnpg.io/instanceRole: primary
+    cnpg.io/pvcRole: PG_DATA
+    cnpg.io/podRole: instance
+    cnpg.io/instanceName: immich-postgresql-15-1
+    role: primary
+spec:
+  storageClassName: local-immich-postgresql-15
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
