--- a/k8s/k3s-home/argocd/media/jellyfin/application.yaml
+++ b/k8s/k3s-home/argocd/media/jellyfin/application.yaml
@@ -10,6 +10,8 @@ spec:
   syncPolicy:
     automated:
       prune: true
+    syncOptions:
+    - CreateNamespace=true
   destination:
     name: in-cluster
     namespace: media
