chore: rename graphic mount

--- a/k8s/k3s-home/argocd/nvr/frigate/values.yaml
+++ b/k8s/k3s-home/argocd/nvr/frigate/values.yaml
@@ -92,7 +92,7 @@ persistence:
       - path: /dev/shm
 
   ## -- To enable GPU
-  renderD128:
+  graphics:
     enabled: true
     type: hostPath
     hostPath: /dev/dri/renderD128
