chore: change gpu path

--- a/k8s/k3s-home/argocd/nvr/frigate/values.yaml
+++ b/k8s/k3s-home/argocd/nvr/frigate/values.yaml
@@ -98,6 +98,6 @@ persistence:
   graphics:
     enabled: true
     type: hostPath
-    hostPath: /dev/dri/renderD128
+    hostPath: /dev/dri
     globalMounts:
-      - path: /dev/dri/renderD128
+      - path: /dev/dri
